--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body, #root { height: 100%; }
-body { @apply bg-gray-50 text-gray-800; }
+html, body, #root {
+  @apply min-h-screen bg-gray-50 text-gray-800;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  @apply font-bold;
+}
